# todo-apps

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 07102770d3f4_add_status_enum.py  fc31a0b77bc0_create_todos_table.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/router/: todo.py
app/schema/: todo.py
app/utils/: list_status.py  standard_query_param.py
